--- a/index.html
+++ b/index.html
@@ -56,18 +56,38 @@
                 <h2 class="visually-hidden">Наши ценности</h2>
                 <ul class="list">
                     <li>
+                        <div class="icon-box">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-header">Внимание к деталям</h3>
                         <p class="paragraph">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li>
+                        <div class="icon-box">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-header">Пунктуальность</h3>
                         <p class="paragraph">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li>
+                        <div class="icon-box">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-header">Планирование</h3>
                         <p class="paragraph">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li>
+                        <div class="icon-box">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-header">Современные технологии</h3>
                         <p class="paragraph">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -125,6 +145,57 @@
                             <h3 class="employee-name">Михаил Ермаков</h3>
                             <p class="paragraph">UI Designer</p>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Regular customers -->
+        <section class="regular-customers section">
+            <div class="container">
+                <h2>Постоянные клиеты</h2>
+                <ul class="list ">
+                    <li class="item">
+                        <a href="#" class="refer">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-reg-cus-1-ya-and-co"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="refer">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-reg-cus-2-tagline-here-company"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="refer">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-reg-cus-3-company"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="refer">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-reg-cus-4-foster-peters"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="refer">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-reg-cus-5-brand"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="refer">
+                            <svg class="icon">
+                                <use href="./images/icons/sprite.svg#icon-reg-cus-6-tagline-company"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
