team socials have done

--- a/index.html
+++ b/index.html
@@ -116,14 +116,44 @@
         <!-- Our team -->
         <section class="team-section section">
             <div class="container">
-                <h2 class="sections-title">Наша команда</h2>
-                <ul class="list">
+                <h2 class="sections-title team-header">Наша команда</h2>
+                <ul class="list team-list">
                     <li class="item">
                         <img width="270" src="./images/team-card-1.jpg" alt="teamcard1">
                         <div class="text">
                             <h3 class="employee-name">Игорь Демьяненко</h3>
                             <p class="paragraph">Product Designer</p>
                         </div>
+                        <ul class="list team-socials">
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="item">
                         <img width="270" src="./images/team-card-2.jpg" alt="teamcard1">
