team socials have done for everyone

--- a/index.html
+++ b/index.html
@@ -161,6 +161,36 @@
                             <h3 class="employee-name">Ольга Репина</h3>
                             <p class="paragraph">Frontend Developer</p>
                         </div>
+                        <ul class="list team-socials">
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="item">
                         <img width="270" src="./images/team-card-3.jpg" alt="teamcard1">
@@ -168,6 +198,36 @@
                             <h3 class="employee-name">Николай Тарасов</h3>
                             <p class="paragraph">Marketing</p>
                         </div>
+                        <ul class="list team-socials">
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="item">
                         <img width="270" src="./images/team-card-4.jpg" alt="teamcard1">
@@ -175,6 +235,36 @@
                             <h3 class="employee-name">Михаил Ермаков</h3>
                             <p class="paragraph">UI Designer</p>
                         </div>
+                        <ul class="list team-socials">
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item social-item">
+                                <a href="" class="refer">
+                                    <svg class="icon" width="20" height="20">
+                                        <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
