--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                     <a class="link" href="tel:+380961111111">
-                        <svg class="icon" width="14">
+                        <svg class="icon" width="10" height="16">
                             <use href="./images/icons/sprite.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
@@ -137,148 +137,148 @@
                         <div class="text">
                             <h3 class="employee-name">Игорь Демьяненко</h3>
                             <p class="paragraph">Product Designer</p>
+                            <ul class="list team-socials">
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="list team-socials">
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="item">
-                        <img width="270" src="./images/team-card-2.jpg" alt="teamcard1">
+                        </li>
+                        <li class="item">
+                            <img width="270" src="./images/team-card-2.jpg" alt="teamcard1">
                         <div class="text">
                             <h3 class="employee-name">Ольга Репина</h3>
                             <p class="paragraph">Frontend Developer</p>
+                            <ul class="list team-socials">
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="list team-socials">
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
                     </li>
                     <li class="item">
                         <img width="270" src="./images/team-card-3.jpg" alt="teamcard1">
                         <div class="text">
                             <h3 class="employee-name">Николай Тарасов</h3>
                             <p class="paragraph">Marketing</p>
+                            <ul class="list team-socials">
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="list team-socials">
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
                     </li>
                     <li class="item">
                         <img width="270" src="./images/team-card-4.jpg" alt="teamcard1">
                         <div class="text">
                             <h3 class="employee-name">Михаил Ермаков</h3>
                             <p class="paragraph">UI Designer</p>
+                            <ul class="list team-socials">
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item social-item">
+                                    <a href="" class="refer">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                        <ul class="list team-socials">
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-instagram"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-twitter"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="item social-item">
-                                <a href="" class="refer">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/icons/sprite.svg#icon-social-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
                     </li>
                 </ul>
             </div>
@@ -352,7 +352,7 @@
                     </address>
                 </li>
                 <li>
-                    <h2 class="social-header">Присоединяйтесь</h2>
+                    <p class="social-header">Присоединяйтесь</p>
                     <ul class="contacts-socials">
                         <li class="item">
                             <a href="" class="refer">
