--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,22 @@
                 </ul>
             </nav> 
             <ul class="list contacts">
-                <li> <a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                <li> <a class="link phone" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+                <li>
+                    <a class="link" href="mailto:info@devstudio.com">
+                        <svg class="icon" width="16" height="14">
+                        <use href="./images/icons/sprite.svg#icon-envelope"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li>
+                    <a class="link" href="tel:+380961111111">
+                        <svg class="icon" width="10" height="16">
+                            <use href="./images/icons/sprite.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
@@ -167,7 +181,7 @@
                     </address>
                 </li>
                 <li>
-                    <h2 class="social-header">Присоединяйтесь</h2>
+                    <p class="social-header">Присоединяйтесь</p>
                     <ul class="contacts-socials">
                         <li class="item">
                             <a href="" class="refer">
