--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                         <a class="link company-name" href="">Web<span>Studio</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="link current-page" href="./index.html">Студия</a>
+                        <a class="link current-page nav-link" href="./index.html">Студия</a>
                     </li>
                     <li class="nav-item">
-                        <a class="link" href="./portfolio.html">Портфолио</a>
+                        <a class="link nav-link" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="nav-item">
-                        <a class="link" href="#">Контакты</a>
+                        <a class="link nav-link" href="#">Контакты</a>
                     </li>
                 </ul>
             </nav> 
